--- a/service/security/secure-use-of-the-service-by-the-customer.yml
+++ b/service/security/secure-use-of-the-service-by-the-customer.yml
@@ -12,7 +12,7 @@ Secure use of the service by the customer:
       - type: radio
         label: "Unknown devices"
       - type: assurance
-    validationNotAnswered: "Please give the device access method"
+    validationNotAnswered: "This question requires an answer."
   "Onboarding guidance":
     requirements: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
     filters: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
@@ -21,7 +21,7 @@ Secure use of the service by the customer:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if onboarding guidance is provided"
+    validationNotAnswered: "This question requires an answer."
   "Training":
     requirements: The consumer can educate those administrating and using the service in how to use it safely and securely.
     filters: The consumer can educate those administrating and using the service in how to use it safely and securely.
@@ -30,4 +30,4 @@ Secure use of the service by the customer:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if training is provided"
+    validationNotAnswered: "This question requires an answer."
