--- a/service/security/audit-information-provision-to-consumers.yml
+++ b/service/security/audit-information-provision-to-consumers.yml
@@ -11,4 +11,4 @@ Audit information provision to consumers:
         label: "Data made available"
       - type: radio
         label: "Data made available by negotiation"
-    validationNotAnswered: "Please choose the type of audit information provided"
+    validationNotAnswered: "This question requires an answer."
