--- a/service/security/separation-between-consumers.yml
+++ b/service/security/separation-between-consumers.yml
@@ -13,7 +13,7 @@ Separation between consumers:
         label: "Private cloud"
       - type: radio
         label: "Hybrid cloud"
-    validationNotAnswered: "Please give the type of cloud deployment model"
+    validationNotAnswered: "This question requires an answer."
   "Type of consumer":
     requirements: Consumers should understand the types of consumer they share the service or platform with.
     filters: Consumers should understand the types of consumer they share the service or platform with.
@@ -29,7 +29,7 @@ Separation between consumers:
       - type: radio
         label: "Anyone - public"
       - type: assurance
-    validationNotAnswered: "Please give the type of consumer"
+    validationNotAnswered: "This question requires an answer."
   "Services separation":
     requirements: Consumers should have confidence that the service provides sufficient separation of their data and service from other consumers of the service.
     filters: Consumers should have confidence that the service provides sufficient separation of their data and service from other consumers of the service.
@@ -38,7 +38,7 @@ Separation between consumers:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if services separation is provided"
+    validationNotAnswered: "This question requires an answer."
   "Services management separation":
     requirements: Consumers should have confidence that their management of the service is kept separate from other consumers (covered separately as part of Principle 9).
     filters: Consumers should have confidence that their management of the service is kept separate from other consumers (covered separately as part of Principle 9).
@@ -47,4 +47,4 @@ Separation between consumers:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if services management separation is provided"
+    validationNotAnswered: "This question requires an answer."
