--- a/service/security/supply-chain-security.yml
+++ b/service/security/supply-chain-security.yml
@@ -7,7 +7,7 @@ Supply-chain security:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if there is visibility of data shared with third-party suppliers"
+    validationNotAnswered: "This question requires an answer."
   "Third-party supplier security requirements":
     requirements: The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.
     filters: The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.
@@ -16,7 +16,7 @@ Supply-chain security:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if the service provides security requirements for third-party suppliers"
+    validationNotAnswered: "This question requires an answer."
   "Third-party supplier risk assessment":
     requirements: The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.
     filters: The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.
@@ -25,7 +25,7 @@ Supply-chain security:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if the service provides third-party supplier risk assessments"
+    validationNotAnswered: "This question requires an answer."
   "Third-party supplier compliance monitoring":
     requirements: The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.
     filters: The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.
@@ -34,7 +34,7 @@ Supply-chain security:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if the service provides third-party supplier compliance monitoring"
+    validationNotAnswered: "This question requires an answer."
   "Hardware and software verification":
     requirements: The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.
     filters: The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.
@@ -43,4 +43,4 @@ Supply-chain security:
     fields:
       - type: boolean
       - type: assurance
-    validationNotAnswered: "Please answer if the service provides hardware and software verification"
+    validationNotAnswered: "This question requires an answer."
