None of the above option on vetting
As pointed out by Kev—either need 'none of the above' or for this question to be optional. Going for 'none of the above'.

--- a/service/security/personnel-security.yml
+++ b/service/security/personnel-security.yml
@@ -15,5 +15,7 @@ Personnel security:
         label: "Background checks in accordance with BS7858:2012"
       - type: checkbox
         label: "Employment checks"
+      - type: checkbox
+        label: "None of the above"
       - type: assurance
     validationNotAnswered: "This question requires an answer."
