--- a/service/security/separation-between-consumers.yml
+++ b/service/security/separation-between-consumers.yml
@@ -17,15 +17,15 @@ Separation between consumers:
   "Type of consumer":
     requirements: Consumers should understand the types of consumer they share the service or platform with.
     filters: Consumers should understand the types of consumer they share the service or platform with.
-    hint: "What types of other consumer do your consumers share the service or platform with?"
+    hint: "What types of other consumer do you share the service or platform with?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radio
         label: "No other consumer"
       - type: radio
-        label: "Only government"
+        label: "Only government consumers"
       - type: radio
-        label: "A specific group"
+        label: "A specific consumer group, eg Police, Defence or Health"
       - type: radio
         label: "Anyone - public"
       - type: assurance
@@ -33,7 +33,7 @@ Separation between consumers:
   "Services separation":
     requirements: Consumers should have confidence that the service provides sufficient separation of their data and service from other consumers of the service.
     filters: Consumers should have confidence that the service provides sufficient separation of their data and service from other consumers of the service.
-    hint: "Do you provide separation of consumer data and service from other consumers of the service?"
+    hint: "Do you securely separate consumer data and services from other consumers of the service?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
@@ -42,7 +42,7 @@ Separation between consumers:
   "Services management separation":
     requirements: Consumers should have confidence that their management of the service is kept separate from other consumers (covered separately as part of Principle 9).
     filters: Consumers should have confidence that their management of the service is kept separate from other consumers (covered separately as part of Principle 9).
-    hint: "Is the management of a consumer’s service kept separate from other consumers?"
+    hint: "Is your management of a consumer’s service kept separate from other consumers?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
