--- a/service/security/external-interface-protection.yml
+++ b/service/security/external-interface-protection.yml
@@ -2,7 +2,7 @@ External interface protection:
   "Onboarding guidance provided":
     requirements: The consumer understands how to safely connect to the service whilst minimising risk to the consumer’s systems.
     filters: The consumer understands how to safely connect to the service whilst minimising risk to the consumer’s systems.
-    hint: "Do you provide onboarding guidance, covering safe and secure connection?"
+    hint: "Do you provide onboarding guidance covering secure connection to the service?"
     dependsOnLots: PaaS, IaaS
     fields:
       - type: boolean
@@ -10,31 +10,15 @@ External interface protection:
   "Interconnection method provided":
     requirements: The consumer understands what physical and logical interfaces their information is available from.
     filters: The consumer understands what physical and logical interfaces their information is available from.
-    hint: "What method of interconnection do you provide? Choose all that apply."
+    hint: "What method of interconnection to the service do you provide? Choose all that apply."
     dependsOnLots: PaaS, IaaS
     fields:
       - type: checkbox
-        label: "Internet"
+        label: "Encrypted PSN service"
       - type: checkbox
-        label: "PSN WAN"
+        label: "PSN service"
       - type: checkbox
         label: "Private WAN"
-    validationNotAnswered: "This question requires an answer."
-  "Data access control provided":
-    requirements: The consumer has sufficient confidence that protections are in place to control access to their data.
-    filters: The consumer has sufficient confidence that protections are in place to control access to their data.
-    hint: "Do you provide access control of the data to the service for consumers?"
-    dependsOnLots: SaaS, PaaS, IaaS
-    fields:
-      - type: boolean
-      - type: assurance
-    validationNotAnswered: "This question requires an answer."
-  "Authentication and authorisation provided":
-    requirements: The consumer has sufficient confidence that the service can determine the identity of connecting users and services to an appropriate level for the data or function being accessed.
-    filters: The consumer has sufficient confidence that the service can determine the identity of connecting users and services to an appropriate level for the data or function being accessed.
-    hint: "Do you provide authentication and authorisation to the service for all functions?"
-    dependsOnLots: SaaS, PaaS, IaaS
-    fields:
-      - type: boolean
-      - type: assurance
+      - type: checkbox
+        label: "Internet"
     validationNotAnswered: "This question requires an answer."
