--- a/service/security/personnel-security.yml
+++ b/service/security/personnel-security.yml
@@ -6,16 +6,12 @@ Personnel security:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: checkbox
-        label: "Developed vetting"
-      - type: checkbox
-        label: "Security clearance vetting"
+        label: "Security clearance national vetting (SC)"
       - type: checkbox
         label: "Baseline personnel security standard (BPSS)"
       - type: checkbox
         label: "Background checks in accordance with BS7858:2012"
       - type: checkbox
         label: "Employment checks"
-      - type: checkbox
-        label: "None of the above"
       - type: assurance
     validationNotAnswered: "This question requires an answer."
