--- a/service/security/secure-use-of-the-service-by-the-customer.yml
+++ b/service/security/secure-use-of-the-service-by-the-customer.yml
@@ -13,10 +13,10 @@ Secure use of the service by the customer:
         label: "Unknown devices"
       - type: assurance
     validationNotAnswered: "This question requires an answer."
-  "Onboarding guidance":
+  "Service configuration guidance":
     requirements: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
     filters: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
-    hint: "Do you provide onboarding guidance, including impacts on the consumer’s security?"
+    hint: "Do you provide guidance on service configuration options and the relative impacts on security?"
     dependsOnLots: PaaS, IaaS
     fields:
       - type: boolean
