--- a/service/pricing.yml
+++ b/service/pricing.yml
@@ -4,6 +4,7 @@ Pricing:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     validationNoMinPriceSpecified: "Minimum price requires an answer."
     validationNoUnitSpecified: "Pricing unit requires an answer. If none of the provided units apply, please choose 'Unit'."
+    validationNotANumber: "Prices must be numbers only, without units, eg 99.95"
     fields:
       - type: pricing
   VAT included:
